--- a/index.html
+++ b/index.html
@@ -521,6 +521,7 @@
       padding: 0;
       line-height: 1;
       transition: color 0.2s;
+      -webkit-appearance: none;
     }
 
     .modal-close:hover {
@@ -583,9 +584,11 @@
       padding: 0.6rem 1.25rem;
       border: 2px solid var(--ink-primary);
       background: var(--paper-cream);
+      color: var(--ink-primary);
       cursor: pointer;
       border-radius: 8px;
       transition: all 0.2s ease;
+      -webkit-appearance: none;
     }
 
     .modal-btn:hover {
