Update example mandala chart with Shohei Ohtani goals in Korean

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
     .cell-text {
       font-family: 'Noto Sans KR', sans-serif;
-      font-size: clamp(0.48rem, 1.1vmin, 0.72rem);
+      font-size: clamp(0.44rem, 1.0vmin, 0.66rem);
       color: var(--ink-primary);
       line-height: 1.25;
       overflow: hidden;
@@ -315,7 +315,7 @@
     }
 
     .cell.center-main .cell-text {
-      font-size: clamp(0.52rem, 1.25vmin, 0.78rem);
+      font-size: clamp(0.48rem, 1.15vmin, 0.72rem);
       font-weight: 700;
       color: #6a4a4a;
       -webkit-line-clamp: 2;
@@ -345,7 +345,7 @@
     }
 
     .cell.center-sub .cell-text {
-      font-size: clamp(0.5rem, 1.2vmin, 0.75rem);
+      font-size: clamp(0.46rem, 1.1vmin, 0.69rem);
       font-weight: 500;
       color: #3a4a3a;
     }
@@ -362,7 +362,7 @@
     }
 
     .cell.outer-center .cell-text {
-      font-size: clamp(0.5rem, 1.2vmin, 0.75rem);
+      font-size: clamp(0.46rem, 1.1vmin, 0.69rem);
       font-weight: 500;
       color: #3a4a3a;
     }
@@ -901,7 +901,7 @@
         <div class="tip-section">
           <h3>핵심 목표 설정</h3>
           <ul>
-            <li><strong>구체적으로</strong> — "성공하기"보다 "2024년 승진하기"처럼 명확하게</li>
+            <li><strong>구체적으로</strong> — "성공하기"보다 "2026년 승진하기"처럼 명확하게</li>
             <li><strong>측정 가능하게</strong> — 달성 여부를 판단할 수 있도록</li>
             <li><strong>현실적으로</strong> — 1년 안에 이룰 수 있는 목표로</li>
           </ul>
@@ -1279,23 +1279,24 @@
       }
 
       gridData = {
-        mainGoal: '2024년 최고의 나 되기',
+        mainGoal: '1차 드래프트 8개 팀',
         subGoals: [
-          '건강한 몸 만들기', '지식과 역량 성장', '커리어 도약',
-          '소중한 관계 유지', '재정적 안정',
-          '취미와 여가 즐기기', '마음의 평화', '가족과 함께'
+          '체력 강화', '제어력', '날카로움', '정신력',
+          '투구 속도 160km/h', '인성', '운', '브레이크볼'
         ],
         actions: [
-          ['매일 아침 30분 운동', '물 2L 마시기', '7시간 수면 확보', '건강한 식단 유지', '정기 건강검진', '스트레칭 루틴', '계단 이용하기', '금연 유지'],
-          ['월 2권 독서하기', '영어 공부 30분', '온라인 강좌 수강', '글쓰기 습관', '강연 참석', '자격증 취득', '스터디 참여', '뉴스레터 구독'],
-          ['업무 효율화', '새로운 스킬 습득', '네트워킹 확대', '포트폴리오 갱신', '발표 능력 향상', '협업 스킬 개선', '피드백 수용', '분기별 목표 설정'],
-          ['친구에게 먼저 연락', '약속 꼭 지키기', '경청하는 습관', '감사 표현하기', '새로운 만남 가지기', '소모임 참여', '축하해주기', '선물하기'],
-          ['가계부 작성', '월급 10% 저축', '투자 공부', '보험 정리', '불필요한 소비 줄이기', '부채 상환', '비상금 마련', '재테크 책 읽기'],
-          ['여행 계획 세우기', '사진 촬영 취미', '새로운 요리 도전', '스포츠 경기 관람', '전시회 방문', '콘서트 가기', '캠핑 떠나기', '드라이브 즐기기'],
-          ['매일 10분 명상', '감정 일기 쓰기', '감사 일기', '긍정적 생각 훈련', '스트레스 관리법 배우기', '상담 받기', '충분한 휴식', '자연 속 산책'],
-          ['부모님께 주 1회 연락', '가족 여행 가기', '집안일 분담', '대화 시간 갖기', '기념일 챙기기', '가족 사진 찍기', '가족에게 요리해주기', '함께 운동하기']
+          ['신체 관리', '보조제 복용', 'FSQ 90kg', '유연성', 'RSQ 130kg', '지구력', '가동 범위', '밤 7공기, 아침 3공기'],
+          ['인스텝 개선', '코어 강화', '스윙 슬레프트 움직임 없게', '안정된 릴리스 포인트', '불안 제거', '하지 근력 강화', '몸을 열지 않기', '정신적 통제'],
+          ['각도 추가', '공을 위에서 치기', '리스트 강화', '무리하지 않기', '하체 주도', '공을 앞에서 릴리스', 'RPM 증가', '가동 범위'],
+          ['명확한 목표와 목적', '기쁨과 슬픔에 흔들리지 않기', '머리는 차갑게, 마음은 따뜻하게', '압박에 강함', '분위기에 휩쓸리지 않기', '파도를 만들지 않기', '승리를 향한 헌신', '연민'],
+          ['축 회전', '하지 강화', '체중 증가', '코어 강화', '어깨 부위 강화', '가동 범위', '직선 캐치볼', '투구 강화'],
+          ['민감성', '사랑받는 사람', '계획', '연민', '감사', '예의', '신뢰받는 사람', '지속성'],
+          ['인사', '쓰레기 줍기', '방 청소', '도구 조심해서 사용', '심판에 대한 태도', '플러스 사고', '지지하는 사람이 되기', '책 읽기'],
+          ['카운트 볼 수 증가', '포크 완성', '슬라이더 날카로움', '느리게 떨어지는 커브', '좌타자 상대로 결정구', '스트레이트와 같은 폼으로 던지기', '스트라이크에서 공을 던지도록 통제', '깊이 이미지']
         ]
       };
+
+
       saveToStorage();
       generateGrid();
     }
